# modRNN

./: .gitignore  CLAUDE.md  README.md  checkerboard.py  loader.py  model.py  neuromod_model.py  new_task_loader.py  plot_summary.py  plot_weights.py  pyproject.toml  train.py  train_checkerboard.py  train_neuromod_checkerboard.py
